--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 
    <!-- Mapbox Styles -->
-   <link href='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css' rel='stylesheet' />
+   <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css' rel='stylesheet' /> -->
 
 
 </head>
